# prseq

./: .bumpversion.cfg  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: workflow.yaml
c/: Makefile  fasta_info.c  fasta_reader.c  fasta_reader.h  fastq_info.c  fastq_reader.c  fastq_reader.h  main.c  prseq_c_module.c  setup.py  test.fasta  test_runner  tests.c
python/: Cargo.toml  Makefile  README.md  pyproject.toml
python/benchmark/: .gitignore  Makefile  generate_data.py  run_benchmarks.py
python/benchmark/benchmarks/: bench_biopython.py  bench_c.py  bench_c_python.py  bench_cat.py  bench_pure_python.py  bench_rust_python.py  bench_wc.py
python/src/: lib.rs
python/src/prseq/: __init__.py  cli.py  fasta.py  fastq.py
python/tests/: test_cli.py  test_fasta.py  test_fasta_cli.py  test_fastq.py  test_fastq_cli.py  test_parser.py
rust/: Cargo.toml  Makefile  README.md
rust/src/: common.rs  fasta.rs  fastq.rs  lib.rs
rust/tests/: test_compression.rs  test_fastq.rs  test_integration.rs  test_parser.rs
