[package]
name = "prseq"
version = "0.0.29"
edition = "2021"
authors = ["Terry C. Jones <terence.jones@charite.de>"]
license = "MIT OR Apache-2.0"
description = "Rust tools (with Python bindings) for sequence analysis"
repository = "https://github.com/virologyCharite/prseq"
keywords = ["bioinformatics", "fasta", "fastq", "sequence-analysis", "python"]
categories = ["science::bioinformatics::sequence-analysis", "parsing"]

[lib]
name = "prseq"
path = "src/lib.rs"

[dependencies]
flate2 = "1.0"
bzip2 = "0.4"

[dev-dependencies]
tempfile = "3"
